Thu Jul 25 00:03:01 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* util_ordering.c (g_order_check): 
	* util_ordering.c (g_order_init): Changed return code to be an int
		32, since we return a com_err error code.  Change the type
		of the sequence number to be an uint32.

	* gssapi.h: Define gss_int32 -- needed for error code returns.

	* Makefile.in (EHDRDIR): Use $(S) instead of /, so that EHDRDIR is
		valid under windows.  Fix how the header file is copied in
		under Windows.

	* gssapiP_generic.h: Include gssapi_generic.h instead of gssapi.h,
		so that we get the definitions of the nametype oids.

Wed Jul 24 18:48:43 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* oid_ops.c (generic_gss_release_oid): Re-enable function.

	* util_token.c (g_verify_token_header): Changed return code to be
		an int 32, since we return a com_err error code.

	* rel_buffer.c (generic_gss_release_buffer): 
	* rel_oid_set.c (generic_gss_release_oid_set): Remove INTERFACE
 		keyworded; not needed (and causes problems) since we're
 		not exporting this function to the DLL.

Tue Jul 23 16:44:50 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* util_validate.c: Only include <sys/file.h> if building with BSD_DB.

	* gssapiP_generic.h: Must include k5-int.h on Windows and
		Macintosh builds.

	* Makefile.in (SRCS): Renamed release_buffer.c to rel_buffer.c,
		and release_oid_set.c to rel_oid_set.c.  Marc broke the
		DOS 8.3 renaming which Gilmore had done to conform with
		DOS's filesystem constraints.

Fri Jun 21 18:02:51 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* gssapi.h: Fix Win-16 build #defines for KRB5_CALLCONV and
	 	KRB5_DLLIMP.

Thu Jun 13 22:11:08 1996  Tom Yu  <tlyu@voltage-multiplier.mit.edu>

	* configure.in: remove ref to ET_RULES

Wed Jun 12 00:48:32 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Update special rule for gssapi_err_generic.obj
		so that it uses the right Win-32 library command.

Wed Jun 12 00:46:41 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>
