@@ -4,6 +4,7 @@ AC_PROG_INSTALL
 AC_PROG_AWK
 V5_SHARED_LIB_OBJS
 SubdirLibraryRule([${OBJS}])
+AC_CHECK_HEADERS(stdlib.h)
 AC_SIZE_T
 AC_CHECK_SIZEOF(short)
 AC_CHECK_SIZEOF(int)
